correction contraste reste du site

--- a/style.css
+++ b/style.css
@@ -774,11 +774,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #EE0000;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
@@ -800,7 +800,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #EE0000!important;
 }
 
 .ltc-atomic-tangerine:hover {
